--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tAI7ua2jDC-modal" data-bs-target="#tAI7ua2jDC-modal">
-                    <img class="w-100" src="assets/images/20230302011936-1-596x596.png" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-tAI7ua2jDC" data-bs-target="#lb-tAI7ua2jDC">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tB5U9tlCqF-modal" data-bs-target="#tB5U9tlCqF-modal">
+                    <img class="w-100" src="assets/images/20230302011936-1-596x596.png" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-tB5U9tlCqF" data-bs-target="#lb-tB5U9tlCqF">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -346,8 +346,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=ead%20mcmusic" class="text-info">Ead MCmusic</a></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tAI7ua2jDC-modal" data-bs-target="#tAI7ua2jDC-modal">
-                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=meisterhaft%20remo"><img class="w-100" src="assets/images/animegan-toon-meisteemo-596x539.png" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tAI7ua2jDC" data-bs-target="#lb-tAI7ua2jDC"></a>
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tB5U9tlCqF-modal" data-bs-target="#tB5U9tlCqF-modal">
+                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=meisterhaft%20remo"><img class="w-100" src="assets/images/animegan-toon-meisteemo-596x539.png" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tB5U9tlCqF" data-bs-target="#lb-tB5U9tlCqF"></a>
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -355,8 +355,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=meisterhaft%20remo" class="text-info">Meisterhaft Remo</a></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tAI7ua2jDC-modal" data-bs-target="#tAI7ua2jDC-modal">
-                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=qwerty%20garbage"><img class="w-100" src="assets/images/cix2cs4diy9mj8tdurxl-3-qoium-512x512.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tAI7ua2jDC" data-bs-target="#lb-tAI7ua2jDC"></a>
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tB5U9tlCqF-modal" data-bs-target="#tB5U9tlCqF-modal">
+                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=qwerty%20garbage"><img class="w-100" src="assets/images/cix2cs4diy9mj8tdurxl-3-qoium-512x512.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tB5U9tlCqF" data-bs-target="#lb-tB5U9tlCqF"></a>
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -364,8 +364,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=qwerty%20garbage" class="text-info">Qwerty Garbage</a></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tAI7ua2jDC-modal" data-bs-target="#tAI7ua2jDC-modal">
-                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=a.i%20tts%20jam"><img class="w-100" src="assets/images/proxy-image-596x596.png" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tAI7ua2jDC" data-bs-target="#lb-tAI7ua2jDC"></a>
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tB5U9tlCqF-modal" data-bs-target="#tB5U9tlCqF-modal">
+                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=a.i%20tts%20jam"><img class="w-100" src="assets/images/proxy-image-596x596.png" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tB5U9tlCqF" data-bs-target="#lb-tB5U9tlCqF"></a>
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -374,11 +374,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="tAI7ua2jDC-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="tB5U9tlCqF-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-tAI7ua2jDC" data-interval="5000" data-bs-interval="5000">
+                        <div class="carousel slide" id="lb-tB5U9tlCqF" data-interval="5000" data-bs-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/20230302011936-1-596x596.png" alt="Mobirise Website Builder">
@@ -394,18 +394,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-tAI7ua2jDC" data-bs-target="#lb-tAI7ua2jDC"></li>
-                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tAI7ua2jDC" data-bs-target="#lb-tAI7ua2jDC"></li>
-                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tAI7ua2jDC" data-bs-target="#lb-tAI7ua2jDC"></li>
-                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tAI7ua2jDC" data-bs-target="#lb-tAI7ua2jDC"></li>
+                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-tB5U9tlCqF" data-bs-target="#lb-tB5U9tlCqF"></li>
+                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tB5U9tlCqF" data-bs-target="#lb-tB5U9tlCqF"></li>
+                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tB5U9tlCqF" data-bs-target="#lb-tB5U9tlCqF"></li>
+                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tB5U9tlCqF" data-bs-target="#lb-tB5U9tlCqF"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-tAI7ua2jDC">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-tB5U9tlCqF">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-tAI7ua2jDC">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-tB5U9tlCqF">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Next</span>
                             </a>
@@ -440,7 +440,7 @@
             <div class="col-md-12 col-lg-10">
                     <h3 class="mbr-section-title mbr-fonts-style mb-4 display-5"><strong>Otherz Social Networkz:</strong></h3>
                 <ul class="list mbr-fonts-style display-7">
-                    <li><strong>Rumble (Reuploads)</strong><br><a href="https://rumble.com/c/c-2453234" class="text-primary">Ead Vernon XtraVaganzas (EVXV) (ead vernon /w extraz, ai tts comedy, etc.)</a><br><a href="https://rumble.com/c/c-2669430" class="text-primary">Ead MCMUSIC RADIO</a><br></li><li>Steam<br><a href="https://steamcommunity.com/profiles/76561198416549186/" class="text-primary">opgamer360</a></li><li>roblox - @whimboy21</li><li><a href="https://linktr.ee/eadvernon" class="text-primary">Linktree</a><br><br><br></li>
+                    <li><strong>Rumble (Reuploads)</strong><br><a href="https://rumble.com/c/c-2453234" class="text-primary">Ead Vernon XtraVaganzas (EVXV) (ead vernon /w extraz, ai tts comedy, etc.)</a><br><a href="https://rumble.com/c/c-2669430" class="text-primary">Ead MCMUSIC RADIO</a></li><li><a href="https://linktr.ee/eadvernon" class="text-primary">Linktree</a><br><br><br></li>
                 </ul>
             </div>
         </div>
@@ -465,11 +465,11 @@
 
 <section data-bs-version="5.1" class="slider1 cid-tugZoITPF7" id="slider1-t">
     
-    <div class="carousel slide" id="tAI7ubrSfb" data-interval="5000" data-bs-interval="5000">
+    <div class="carousel slide" id="tB5U9uBzx7" data-interval="5000" data-bs-interval="5000">
         <ol class="carousel-indicators">
-            <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tAI7ubrSfb" data-bs-target="#tAI7ubrSfb"></li>
-            <li data-slide-to="1" data-bs-slide-to="1" data-target="#tAI7ubrSfb" data-bs-target="#tAI7ubrSfb"></li>
-            <li data-slide-to="2" data-bs-slide-to="2" data-target="#tAI7ubrSfb" data-bs-target="#tAI7ubrSfb"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tAI7ubrSfb" data-bs-target="#tAI7ubrSfb"></li>
+            <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tB5U9uBzx7" data-bs-target="#tB5U9uBzx7"></li>
+            <li data-slide-to="1" data-bs-slide-to="1" data-target="#tB5U9uBzx7" data-bs-target="#tB5U9uBzx7"></li>
+            <li data-slide-to="2" data-bs-slide-to="2" data-target="#tB5U9uBzx7" data-bs-target="#tB5U9uBzx7"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tB5U9uBzx7" data-bs-target="#tB5U9uBzx7"></li>
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item slider-image item active">
@@ -520,11 +520,11 @@
                 </div>
             </div>
         </div>
-        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tAI7ubrSfb">
+        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tB5U9uBzx7">
             <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
             <span class="sr-only visually-hidden">Previous</span>
         </a>
-        <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tAI7ubrSfb">
+        <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tB5U9uBzx7">
             <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
             <span class="sr-only visually-hidden">Next</span>
         </a>
@@ -576,12 +576,12 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright since 2015 Ead Vernon (other aliases &amp; projects) - All Rights Reserved
+                    © Copyright since 2015-2016 Ead Vernon (other aliases &amp; projects) - All Rights Reserved
                 </p>
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2845797" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/easiest-website-builder.html">Easiest Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2845797" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/no-code-website-builder.html">No Code Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
