--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <img src="assets/images/avatars-000467405271-xt6xn6-t500x500-121x121.jpg" alt="Mobirise Website Builder" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-warning text-primary display-7" href="index.html">EVXV 's WEB</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-warning text-primary display-7" href="index.html">EVXV 's WEB ( ead vernon )</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -63,7 +63,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="https://audiomack.com/eadvernon">Music (Audiomack)</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="justdancememeedition.html">Just Dance Meme Edition</a></li>
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="justdancememeedition.html">Just Dance Meme Edition</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="https://www.reddit.com/r/eadvernonreuploads/?f=flair_name%3A%22Blog%22">Blog (Reddit)<br></a></li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://www.reddit.com/user/Past-Background-6740/" target="_blank">
@@ -337,8 +337,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tB5U9tlCqF-modal" data-bs-target="#tB5U9tlCqF-modal">
-                    <img class="w-100" src="assets/images/20230302011936-1-596x596.png" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-tB5U9tlCqF" data-bs-target="#lb-tB5U9tlCqF">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tBgvpYe18V-modal" data-bs-target="#tBgvpYe18V-modal">
+                    <img class="w-100" src="assets/images/20230302011936-1-596x596.png" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-tBgvpYe18V" data-bs-target="#lb-tBgvpYe18V">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -346,8 +346,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=ead%20mcmusic" class="text-info">Ead MCmusic</a></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tB5U9tlCqF-modal" data-bs-target="#tB5U9tlCqF-modal">
-                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=meisterhaft%20remo"><img class="w-100" src="assets/images/animegan-toon-meisteemo-596x539.png" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tB5U9tlCqF" data-bs-target="#lb-tB5U9tlCqF"></a>
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tBgvpYe18V-modal" data-bs-target="#tBgvpYe18V-modal">
+                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=meisterhaft%20remo"><img class="w-100" src="assets/images/animegan-toon-meisteemo-596x539.png" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tBgvpYe18V" data-bs-target="#lb-tBgvpYe18V"></a>
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -355,8 +355,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=meisterhaft%20remo" class="text-info">Meisterhaft Remo</a></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tB5U9tlCqF-modal" data-bs-target="#tB5U9tlCqF-modal">
-                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=qwerty%20garbage"><img class="w-100" src="assets/images/cix2cs4diy9mj8tdurxl-3-qoium-512x512.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tB5U9tlCqF" data-bs-target="#lb-tB5U9tlCqF"></a>
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tBgvpYe18V-modal" data-bs-target="#tBgvpYe18V-modal">
+                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=qwerty%20garbage"><img class="w-100" src="assets/images/cix2cs4diy9mj8tdurxl-3-qoium-512x512.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tBgvpYe18V" data-bs-target="#lb-tBgvpYe18V"></a>
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -364,8 +364,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=qwerty%20garbage" class="text-info">Qwerty Garbage</a></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tB5U9tlCqF-modal" data-bs-target="#tB5U9tlCqF-modal">
-                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=a.i%20tts%20jam"><img class="w-100" src="assets/images/proxy-image-596x596.png" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tB5U9tlCqF" data-bs-target="#lb-tB5U9tlCqF"></a>
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tBgvpYe18V-modal" data-bs-target="#tBgvpYe18V-modal">
+                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=a.i%20tts%20jam"><img class="w-100" src="assets/images/proxy-image-596x596.png" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tBgvpYe18V" data-bs-target="#lb-tBgvpYe18V"></a>
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -374,11 +374,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="tB5U9tlCqF-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="tBgvpYe18V-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-tB5U9tlCqF" data-interval="5000" data-bs-interval="5000">
+                        <div class="carousel slide" id="lb-tBgvpYe18V" data-interval="5000" data-bs-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/20230302011936-1-596x596.png" alt="Mobirise Website Builder">
@@ -394,18 +394,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-tB5U9tlCqF" data-bs-target="#lb-tB5U9tlCqF"></li>
-                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tB5U9tlCqF" data-bs-target="#lb-tB5U9tlCqF"></li>
-                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tB5U9tlCqF" data-bs-target="#lb-tB5U9tlCqF"></li>
-                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tB5U9tlCqF" data-bs-target="#lb-tB5U9tlCqF"></li>
+                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-tBgvpYe18V" data-bs-target="#lb-tBgvpYe18V"></li>
+                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tBgvpYe18V" data-bs-target="#lb-tBgvpYe18V"></li>
+                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tBgvpYe18V" data-bs-target="#lb-tBgvpYe18V"></li>
+                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tBgvpYe18V" data-bs-target="#lb-tBgvpYe18V"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-tB5U9tlCqF">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-tBgvpYe18V">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-tB5U9tlCqF">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-tBgvpYe18V">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Next</span>
                             </a>
@@ -422,8 +422,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-5" href="https://www.reddit.com/r/eadvernonreuploads/">My sexy subreddit</a>
-                    <a class="btn btn-secondary display-5" href="https://www.reddit.com/r/eadvernonreuploads/search/?q=nsfw%3Ayes&restrict_sr=1&sr_nsfw=&include_over_18=1" target="_blank">Ead18.com</a> <a class="btn btn-warning display-5" href="https://i.kym-cdn.com/photos/images/newsfeed/001/839/197/2ad.png">(reddit) ! warning horny !</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-danger display-5" href="https://www.reddit.com/r/eadvernonreuploads/">My sexy subreddit</a></div>
             </div>
         </div>
     </div>
@@ -465,11 +464,11 @@
 
 <section data-bs-version="5.1" class="slider1 cid-tugZoITPF7" id="slider1-t">
     
-    <div class="carousel slide" id="tB5U9uBzx7" data-interval="5000" data-bs-interval="5000">
+    <div class="carousel slide" id="tBgvpZnIle" data-interval="5000" data-bs-interval="5000">
         <ol class="carousel-indicators">
-            <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tB5U9uBzx7" data-bs-target="#tB5U9uBzx7"></li>
-            <li data-slide-to="1" data-bs-slide-to="1" data-target="#tB5U9uBzx7" data-bs-target="#tB5U9uBzx7"></li>
-            <li data-slide-to="2" data-bs-slide-to="2" data-target="#tB5U9uBzx7" data-bs-target="#tB5U9uBzx7"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tB5U9uBzx7" data-bs-target="#tB5U9uBzx7"></li>
+            <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tBgvpZnIle" data-bs-target="#tBgvpZnIle"></li>
+            <li data-slide-to="1" data-bs-slide-to="1" data-target="#tBgvpZnIle" data-bs-target="#tBgvpZnIle"></li>
+            <li data-slide-to="2" data-bs-slide-to="2" data-target="#tBgvpZnIle" data-bs-target="#tBgvpZnIle"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tBgvpZnIle" data-bs-target="#tBgvpZnIle"></li>
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item slider-image item active">
@@ -520,11 +519,11 @@
                 </div>
             </div>
         </div>
-        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tB5U9uBzx7">
+        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tBgvpZnIle">
             <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
             <span class="sr-only visually-hidden">Previous</span>
         </a>
-        <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tB5U9uBzx7">
+        <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tBgvpZnIle">
             <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
             <span class="sr-only visually-hidden">Next</span>
         </a>
@@ -576,12 +575,12 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright since 2015-2016 Ead Vernon (other aliases &amp; projects) - All Rights Reserved
+                    © Copyright since 2015-2016 Ead Vernon - All Rights Reserved
                 </p>
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2845797" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/no-code-website-builder.html">No Code Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2845797" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/html-editor.html">WYSIWYG HTML Editor</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
